--- a/apps/builder/src/app/views/editor/editor.component.html
+++ b/apps/builder/src/app/views/editor/editor.component.html
@@ -54,7 +54,7 @@
                 {{item.name}}
             </div>
         </div>
-        <div class="after-circle-custom" [id]="'block-endpoint-'+item.id" (mousedown)="endpointMouseDown($event)"></div>
+        <!-- <div class="after-circle-custom" [id]="'block-endpoint-'+item.id" (mousedown)="endpointMouseDown($event)"></div> -->
         </div>
       </div>
     </div>
