{setting.component.ts} | design

--- a/apps/builder/src/app/views/dashboard/dashboard.component.html
+++ b/apps/builder/src/app/views/dashboard/dashboard.component.html
@@ -162,11 +162,11 @@
               <div class="flex bg-white modal-box">
                 <div class="w-1/4 sidebar">
                     <a href="#">example@email.com</a>
-                    <button class="rounded-none active">
+                    <button (click)="myAccountDetail()" class="rounded-none active">
                         <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
                         My Account 
                     </button>
-                    <button class="rounded-none ">
+                    <button (click)="myPreferenceDetail()" class="rounded-none ">
                         <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
                         Preferences
                     </button>
@@ -185,32 +185,38 @@
                     </button>
                 </div>
                 <div class="w-3/4 aside">
-                    <div class="profile">
-                        <img src="https://avatars.githubusercontent.com/u/4618863?v=4?">
-                        <div class="file-upload">
-                            <input type="file" />
-                            <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><polyline points="16 16 12 12 8 16"></polyline><line x1="12" y1="12" x2="12" y2="21"></line><path d="M20.39 18.39A5 5 0 0 0 18 9h-1.26A8 8 0 1 0 3 16.3"></path><polyline points="16 16 12 12 8 16"></polyline></svg>
-                            Change photo  
-                        </div>
-                            <p>.jpg or.png, max 1MB</p>        
-                    </div> 
-                    <form class="account-form">
-                            <div class="field-box">
-                                <label>Name</label>
-                                <input type="text" class="" placeholder="nomikhokher">
-                            </div>
-                            <div class="field-box">
-                                <label>Email address</label>
-                                <input type="text" disabled id="email" placeholder="Email@gmail.com">
-                            </div>
-                            <div class="field-box">
-                                <label>API token</label>
-                                <div class="tokken">
-                                    <input type="text" class="" placeholder="..........-1d84-......-b054-..........">
-                                    <button>show</button>
-                                </div>
-                            </div>
-                    </form>
+                  <div *ngIf="myAccount">  
+                      <div class="profile">
+                          <img src="https://avatars.githubusercontent.com/u/4618863?v=4?">
+                          <div class="file-upload">
+                              <input type="file" />
+                              <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><polyline points="16 16 12 12 8 16"></polyline><line x1="12" y1="12" x2="12" y2="21"></line><path d="M20.39 18.39A5 5 0 0 0 18 9h-1.26A8 8 0 1 0 3 16.3"></path><polyline points="16 16 12 12 8 16"></polyline></svg>
+                              Change photo  
+                          </div>
+                              <p>.jpg or.png, max 1MB</p>        
+                      </div> 
+                      <form class="account-form">
+                              <div class="field-box">
+                                  <label>Name</label>
+                                  <input type="text" class="" placeholder="nomikhokher">
+                              </div>
+                              <div class="field-box">
+                                  <label>Email address</label>
+                                  <input type="text" disabled id="email" placeholder="Email@gmail.com">
+                              </div>
+                              <div class="field-box">
+                                  <label>API token</label>
+                                  <div class="tokken">
+                                      <input type="text" class="" placeholder="..........-1d84-......-b054-..........">
+                                      <button>show</button>
+                                  </div>
+                              </div>
+                      </form>
+                  </div>
+                  <div *ngIf="myPreference">
+                      <h1>Prefrence Detail..</h1>
+                      <!-- <preferences></preferences> -->
+                  </div>
                 </div>
               </div>
           </div>
