--- a/apps/builder/src/app/views/setting/setting.component.html
+++ b/apps/builder/src/app/views/setting/setting.component.html
@@ -60,7 +60,7 @@
         <div *ngIf="myPreference">   
             <div class="w-3/4 aside">
                 <h1>Hello Preference</h1>
-                <!-- <Preferences></Preferences> -->
+                 <!-- <preferences></preferences>  -->
             </div>
         </div>
 
