--- a/apps/builder/src/app/views/dashboard/dashboard.component.html
+++ b/apps/builder/src/app/views/dashboard/dashboard.component.html
@@ -183,7 +183,10 @@
                         Members 
                     </button>
                     <button (click)="myBilling()" class="rounded-none ">
-                        <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><rect x="1" y="4" width="22" height="16" rx="2" ry="2"></rect><line x1="1" y1="10" x2="23" y2="10"></line></svg>
+                        <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                          <rect x="1" y="4" width="22" height="16" rx="2" ry="2"></rect>
+                          <line x1="1" y1="10" x2="23" y2="10"></line>
+                        </svg>
                         Billing
                     </button>
                 </div>
