--- a/apps/builder/src/app/views/acc-setting/acc-setting.component.html
+++ b/apps/builder/src/app/views/acc-setting/acc-setting.component.html
@@ -1,20 +1,24 @@
 
-    <div  class="w-3/4 aside">
+<div class="w-3/4 aside">
   <p>icon</p>
-
   <div class="profile">
     <div class="file-upload">
-        <input type="file" />
-        <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-f7qfrb" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round"><path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z"></path></svg>
-       
-      </div>
-      
+      <input type="file" />
+      <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-f7qfrb"
+        stroke-width="2px" stroke-linecap="round" stroke-linejoin="round">
+        <path
+          d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0
+          1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1
+          7.94-7.94l-3.76 3.76z">
+        </path>
+      </svg>
+    </div>
+  </div>
+
+  <form class="invite-form">
+    <label>Name</label> 
+    <input type="text" value="nomikhokher's workspace">
+    <input type="submit" value="Delete workspace" class="sub-btn">
+  </form>
+
 </div>
-  
-        <form  class="invite-form">
-            <label>Name</label>
-          <input  type="text" value="nomikhokher's workspace">
-          <input type="submit" value="Delete workspace" class="sub-btn">
-        </form>
-        
-      </div>  
