--- a/apps/builder/src/app/views/members/members.component.html
+++ b/apps/builder/src/app/views/members/members.component.html
@@ -2,7 +2,7 @@
     <div class="flex"> -->
 
 
-    <!-- <div class="w-1/4 sidebar">
+<!-- <div class="w-1/4 sidebar">
         <a href="#">example@email.com</a>
 
         <button class="rounded-none ">
@@ -28,36 +28,34 @@
             Billing
         </button>
     </div> -->
-    <!-- <div  class="w-3/4 aside"> -->
-        <div  class="w-full m-info">
-          <svg  viewBox="0 0 24 24" focusable="false" class="chakra-icon css-fi0ww0">
-            <path  fill="currentColor" d="M12,0A12,12,0,1,0,24,12,12.013,12.013,0,0,0,12,0Zm.25,5a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,12.25,5ZM14.5,18.5h-4a1,1,0,0,1,0-2h.75a.25.25,0,0,0,.25-.25v-4.5a.25.25,0,0,0-.25-.25H10.5a1,1,0,0,1,0-2h1a2,2,0,0,1,2,2v4.75a.25.25,0,0,0,.25.25h.75a1,1,0,1,1,0,2Z"></path>
-          </svg>
-          <p >Upgrade to team plan for a collaborative workspace, unlimited team members, and advanced permissions.</p>
-          <button  type="button">More info</button>
-        </div>
-        <form  class="invite-form">
-          <input  type="text">
-          <input  type="button">
-        </form>
-        <div  class="w-full p-info">
-          <form >
-            <div  class="field-box">
-              <input  type="text" disabled="" id="email" placeholder="Email@gmail.com">
-              <input  type="submit" disabled="" value="Invite" class="sub-btn">
-            </div>
-          </form>
-          <div class="profile">
-            <img src="https://avatars.githubusercontent.com/u/4618863?v=4?">
-            <div  class="file-upload">
-              
-             <h5>nomikhokher</h5> 
-             <a href="#">nomankhokher786@gmail.com</a> 
-            </div>
-             
-          </div>
-          <button  type="button">Admin</button>
-        </div> 
-      <!-- </div> 
+<!-- <div  class="w-3/4 aside"> -->
+<div class="w-full m-info">
+  <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-fi0ww0">
+    <path fill="currentColor"
+      d="M12,0A12,12,0,1,0,24,12,12.013,12.013,0,0,0,12,0Zm.25,5a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,12.25,5ZM14.5,18.5h-4a1,1,0,0,1,0-2h.75a.25.25,0,0,0,.25-.25v-4.5a.25.25,0,0,0-.25-.25H10.5a1,1,0,0,1,0-2h1a2,2,0,0,1,2,2v4.75a.25.25,0,0,0,.25.25h.75a1,1,0,1,1,0,2Z">
+    </path>
+  </svg>
+  <p>Upgrade to team plan for a collaborative workspace, unlimited team members,
+    and advanced permissions.</p>
+  <button type="button">More info</button>
 </div>
-</div> -->
+<form class="invite-form">
+  <input type="text">
+  <input type="button">
+</form>
+<div class="w-full p-info">
+  <form>
+    <div class="field-box">
+      <input type="text" disabled="" id="email" placeholder="Email@gmail.com">
+      <input type="submit" disabled="" value="Invite" class="sub-btn">
+    </div>
+  </form>
+  <div class="profile">
+    <img src="https://avatars.githubusercontent.com/u/4618863?v=4?">
+    <div class="file-upload">
+      <h5>nomikhokher</h5>
+      <a href="#">nomankhokher786@gmail.com</a>
+    </div>
+  </div>
+  <button type="button">Admin</button>
+</div>
