--- a/apps/builder/src/app/views/dashboard/dashboard.component.html
+++ b/apps/builder/src/app/views/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="dashboard mx-auto ">
+<div class="mx-auto dashboard ">
   <header class="w-full mx-auto header">
     <div class="">
       <a href="#" class="w-8">
@@ -86,7 +86,7 @@
     </div>
   </header>
 
-  <div class="four-boxes w-full mx-auto">
+  <div class="w-full mx-auto four-boxes">
     <button (click)="popUpSet1()" class="rounded-none sign-up-btn"><svg viewBox="0 0 24 24" focusable="false"
         class="chakra-icon b-icon" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round">
         <line x1="22" y1="12" x2="2" y2="12"></line>
@@ -98,9 +98,9 @@
       </svg>example's workspace <span class="b-label">Pro</span></button>
   </div>
 
-  <div class="flex flex-row btn-h">
-    <div class="basis-1/4 mr-4 col">
-      <button class="c-n" (click)="navigate(['/', 'create'])">
+  <div class="flex flex-row gap-4 btn-h">
+    <div class="basis-1/4 col">
+      <button class="c-n" (click)="navigate(['/', 'create']);saveTypeBot()">
         <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon c-svg" stroke-width="2px" stroke-linecap="round"
           stroke-linejoin="round">
           <line x1="12" y1="5" x2="12" y2="19"></line>
@@ -109,91 +109,31 @@
         <h2 class="text-white" style="color:#fff;">Create a typebot</h2>
       </button>
     </div>
-    <div class="basis-1/4 mr-4 col">
-      <button type="button" class="chakra-button css-1m4rxa3" aria-label="Drag">
-        <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px"
-          stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-          <circle cx="12" cy="9" r="1"></circle>
-          <circle cx="19" cy="9" r="1"></circle>
-          <circle cx="5" cy="9" r="1"></circle>
-          <circle cx="12" cy="15" r="1"></circle>
-          <circle cx="19" cy="15" r="1"></circle>
-          <circle cx="5" cy="15" r="1"></circle>
-        </svg>
-      </button>
-      <span>Live</span>
-      <button type="button" class="chakra-button chakra-menu__menu-button css-1bv7he3" aria-label="Show My typebot menu"
-        data-testid="more-button" id="menu-button-:rd:" aria-expanded="false" aria-haspopup="menu"
-        aria-controls="menu-list-:rd:">
-        <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px"
-          stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-          <circle cx="12" cy="12" r="1"></circle>
-          <circle cx="12" cy="5" r="1"></circle>
-          <circle cx="12" cy="19" r="1"></circle>
-        </svg>
-      </button>
-      <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon c-svg" stroke-width="2px" stroke-linecap="round"
-        stroke-linejoin="round">
-        <path
-          d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z">
-        </path>
-      </svg>
-      <h2>My typebot</h2>
-    </div>
-    <div class="basis-1/4 mr-4 col">
-      <button type="button" class="chakra-button css-1m4rxa3" aria-label="Drag">
-        <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px"
-          stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-          <circle cx="12" cy="9" r="1"></circle>
-          <circle cx="19" cy="9" r="1"></circle>
-          <circle cx="5" cy="9" r="1"></circle>
-          <circle cx="12" cy="15" r="1"></circle>
-          <circle cx="19" cy="15" r="1"></circle>
-          <circle cx="5" cy="15" r="1"></circle>
-        </svg>
-      </button>
-      <span class="invisible">Live</span>
-      <button type="button" class="chakra-button chakra-menu__menu-button css-1bv7he3" aria-label="Show My typebot menu"
-        data-testid="more-button" id="menu-button-:rd:" aria-expanded="false" aria-haspopup="menu"
-        aria-controls="menu-list-:rd:">
-        <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px"
-          stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-          <circle cx="12" cy="12" r="1"></circle>
-          <circle cx="12" cy="5" r="1"></circle>
-          <circle cx="12" cy="19" r="1"></circle>
-        </svg>
-      </button>
-      <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon c-svg" stroke-width="2px" stroke-linecap="round"
-        stroke-linejoin="round">
-        <path
-          d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z">
-        </path>
-      </svg>
-      <h2>My typebot</h2>
-    </div>
-    <div class="basis-1/4 mr-4 col">
-      <button type="button" class="chakra-button css-1m4rxa3" aria-label="Drag">
-        <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px"
-          stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-          <circle cx="12" cy="9" r="1"></circle>
-          <circle cx="19" cy="9" r="1"></circle>
-          <circle cx="5" cy="9" r="1"></circle>
-          <circle cx="12" cy="15" r="1"></circle>
-          <circle cx="19" cy="15" r="1"></circle>
-          <circle cx="5" cy="15" r="1"></circle>
-        </svg>
-      </button>
-      <span class="invisible">Live</span>
-      <button type="button" class="chakra-button chakra-menu__menu-button css-1bv7he3" aria-label="Show My typebot menu"
-        data-testid="more-button" id="menu-button-:rd:" aria-expanded="false" aria-haspopup="menu"
-        aria-controls="menu-list-:rd:">
-        <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px"
-          stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-          <circle cx="12" cy="12" r="1"></circle>
-          <circle cx="12" cy="5" r="1"></circle>
-          <circle cx="12" cy="19" r="1"></circle>
-        </svg>
-      </button>
+    <div *ngFor="let typebot of saveTypebotArray" class="basis-1/4 col">
+      <div class="flex items-center justify-between px-4">
+        <button type="button" class="chakra-button css-1m4rxa3" aria-label="Drag">
+          <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px"
+            stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <circle cx="12" cy="9" r="1"></circle>
+            <circle cx="19" cy="9" r="1"></circle>
+            <circle cx="5" cy="9" r="1"></circle>
+            <circle cx="12" cy="15" r="1"></circle>
+            <circle cx="19" cy="15" r="1"></circle>
+            <circle cx="5" cy="15" r="1"></circle>
+          </svg>
+        </button>
+        <span *ngIf="false">Live</span>
+        <button type="button" class="chakra-button chakra-menu__menu-button css-1bv7he3" aria-label="Show My typebot menu"
+          data-testid="more-button" id="menu-button-:rd:" aria-expanded="false" aria-haspopup="menu"
+          aria-controls="menu-list-:rd:">
+          <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px"
+            stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <circle cx="12" cy="12" r="1"></circle>
+            <circle cx="12" cy="5" r="1"></circle>
+            <circle cx="12" cy="19" r="1"></circle>
+          </svg>
+        </button>
+      </div>
       <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon c-svg" stroke-width="2px" stroke-linecap="round"
         stroke-linejoin="round">
         <path
@@ -206,11 +146,11 @@
 
   <div *ngIf="popup" class="">
     <div class="relative z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true">
-      <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"></div>
-      <div (click)="ClickedOut($event)" class="fixed z-10 inset-0 overflow-y-auto">
-        <div class="flex items-end sm:items-center justify-center min-h-full p-4 text-center sm:p-0">
+      <div class="fixed inset-0 transition-opacity bg-gray-500 bg-opacity-75"></div>
+      <div (click)="ClickedOut($event)" class="fixed inset-0 z-10 overflow-y-auto">
+        <div class="flex items-end justify-center min-h-full p-4 text-center sm:items-center sm:p-0">
           <div (click)="ClickedOut($event)" class="flex bg-white modal-box">
-            <div class="w-1/4  sidebar ">
+            <div class="w-1/4 sidebar ">
               <a>example@email.com</a>
               <button (click)="myAccount()" class="rounded-none active">
                 <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px"
@@ -322,13 +262,13 @@
 
   <div *ngIf="popup1">
     <div class="relative z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true">
-      <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"></div>
-      <div (click)="ClickedOut1($event)" class="fixed z-10 inset-0 overflow-y-auto">
-        <div class="sec-popup flex items-end sm:items-center justify-center mt-14  p-4 text-center sm:p-0">
+      <div class="fixed inset-0 transition-opacity bg-gray-500 bg-opacity-75"></div>
+      <div (click)="ClickedOut1($event)" class="fixed inset-0 z-10 overflow-y-auto">
+        <div class="flex items-end justify-center p-4 text-center sec-popup sm:items-center mt-14 sm:p-0">
           <div (click)="ClickedOut1($event)" class="flex bg-white modal-box ">
-            <div class="modal-popup  px-5 py-3  ">
-              <h4 class="flex justify-left font-normal align-middle px-3 py-3 mb-3 wp-title rounded-md">
-                <svg viewBox="0 0 24 24" focusable="false" class="mr-2 mt-1 text-white">
+            <div class="px-5 py-3 modal-popup ">
+              <h4 class="flex px-3 py-3 mb-3 font-normal align-middle rounded-md justify-left wp-title">
+                <svg viewBox="0 0 24 24" focusable="false" class="mt-1 mr-2 text-white">
                   <path fill="currentColor"
                     d="M12,0A12,12,0,1,0,24,12,12.013,12.013,0,0,0,12,0Zm.25,5a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,12.25,5ZM14.5,18.5h-4a1,1,0,0,1,0-2h.75a.25.25,0,0,0,.25-.25v-4.5a.25.25,0,0,0-.25-.25H10.5a1,1,0,0,1,0-2h1a2,2,0,0,1,2,2v4.75a.25.25,0,0,0,.25.25h.75a1,1,0,1,1,0,2Z">
                   </path>
@@ -348,47 +288,47 @@
                   d="M406.451 267.742C388.635 267.742 374.193 282.184 374.193 300C374.193 317.815 388.635 332.258 406.451 332.258C424.267 332.258 438.709 317.815 438.709 300C438.709 282.184 424.267 267.742 406.451 267.742Z"
                   fill="white"></path>
               </svg>
-              <h3 class="font-bold text-2xl text-left mt-3">Upgrade to <span style="color:#ff8b1a;">Personal Pro</span>
+              <h3 class="mt-3 text-2xl font-bold text-left">Upgrade to <span style="color:#ff8b1a;">Personal Pro</span>
                 plan</h3>
-              <p class=" text-lg text-left my-4">For solo creators who want to do even more.</p>
-              <div class="flex justify-left align-bottom  my-3">
-                <h5 class="font-bold text-4xl">$39 </h5>
-                <span class="text-base pt-3 font-bold"> / month</span>
+              <p class="my-4 text-lg text-left ">For solo creators who want to do even more.</p>
+              <div class="flex my-3 align-bottom justify-left">
+                <h5 class="text-4xl font-bold">$39 </h5>
+                <span class="pt-3 text-base font-bold"> / month</span>
               </div>
-              <h6 class="text-lg pt-1 font-semibold mb-4 text-left">Everything in Personal, plus:
+              <h6 class="pt-1 mb-4 text-lg font-semibold text-left">Everything in Personal, plus:
               </h6>
               <ul class="">
-                <li class="flex justify-left align-middle text-medium mb-1">
+                <li class="flex mb-1 align-middle justify-left text-medium">
                   <svg viewBox="0 0 24 24" focusable="false" class="mt-1 mr-2" stroke-width="2px" stroke-linecap="round"
                     stroke-linejoin="round" role="presentation">
                     <polyline points="20 6 9 17 4 12"></polyline>
                   </svg>Branding removed
                 </li>
-                <li class="flex justify-left align-middle text-medium mb-1">
+                <li class="flex mb-1 align-middle justify-left text-medium">
                   <svg viewBox="0 0 24 24" focusable="false" class="mt-1 mr-2" stroke-width="2px" stroke-linecap="round"
                     stroke-linejoin="round" role="presentation">
                     <polyline points="20 6 9 17 4 12"></polyline>
                   </svg>View incomplete submissions
                 </li>
-                <li class="flex justify-left align-middle text-medium mb-1">
+                <li class="flex mb-1 align-middle justify-left text-medium">
                   <svg viewBox="0 0 24 24" focusable="false" class="mt-1 mr-2" stroke-width="2px" stroke-linecap="round"
                     stroke-linejoin="round" role="presentation">
                     <polyline points="20 6 9 17 4 12"></polyline>
                   </svg>In-depth drop off analytics
                 </li>
-                <li class="flex justify-left align-middle text-medium mb-1">
+                <li class="flex mb-1 align-middle justify-left text-medium">
                   <svg viewBox="0 0 24 24" focusable="false" class="mt-1 mr-2" stroke-width="2px" stroke-linecap="round"
                     stroke-linejoin="round" role="presentation">
                     <polyline points="20 6 9 17 4 12"></polyline>
                   </svg>Unlimited custom domains
                 </li>
-                <li class="flex justify-left align-middle text-medium mb-1">
+                <li class="flex mb-1 align-middle justify-left text-medium">
                   <svg viewBox="0 0 24 24" focusable="false" class="mt-1 mr-2" stroke-width="2px" stroke-linecap="round"
                     stroke-linejoin="round" role="presentation">
                     <polyline points="20 6 9 17 4 12"></polyline>
                   </svg>Organize typebots in folders
                 </li>
-                <li class="flex justify-left align-middle text-medium mb-1">
+                <li class="flex mb-1 align-middle justify-left text-medium">
                   <svg viewBox="0 0 24 24" focusable="false" class="mt-1 mr-2" stroke-width="2px" stroke-linecap="round"
                     stroke-linejoin="round" role="presentation">
                     <polyline points="20 6 9 17 4 12"></polyline>
@@ -397,10 +337,10 @@
               </ul>
               <div class="inline-block float-right btn-group mt-7">
                 <button (click)="popUpSet1()"
-                  class="bg-gray-200 hover:bg-gray-300  text-black font-bold py-2 px-4 rounded mr-3">
+                  class="px-4 py-2 mr-3 font-bold text-black bg-gray-200 rounded hover:bg-gray-300">
                   Cancel
                 </button>
-                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded ">
+                <button class="px-4 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-700 ">
                   Upgrade
                 </button>
               </div>
