--- a/apps/builder/src/app/views/dashboard/dashboard.component.css
+++ b/apps/builder/src/app/views/dashboard/dashboard.component.css
@@ -1,107 +1,209 @@
+/* svg {
+  width: 1em;
+  height: 1em;
+  line-height: 1em;
+  -webkit-flex-shrink: 0;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  color: currentColor;
+  fill: transparent !important;
+  vertical-align: middle;
+} */
+
+.dashboard {
+  width: 1000px;
+  position: relative;
+}
+
+/* .header-btn {
+  width: 490px;
+  float: right;
+  text-align: center;
+} */
+
+.header a {
+  float: left;
+  margin: 15px 0 0 22px;
+}
+
+header.container.mx-auto.header {
+  width: 900px;
+  margin-top: 26px;
+}
+
+/* .header-btn button {
+  border-radius: 4px;
+  outline-offset: 2px;
+  line-height: 1.2;
+  border: 1px solid #e5e7eb;
+  text-align: center;
+  padding: 9px 17px;
+  margin-top: 0.5rem;
+  margin: 0 5px;
+  float: left;
+} */
+
+ul.dropdown {
+  width: 252px;
+  padding: 8px 15px;
+  position: absolute;
+  right: 0;
+  background: #fff;
+  margin-top: 7px;
+  top: 42px;
+  margin-right: 15px;
+  float: right;
+  box-shadow: 1px 2px 9px #f1f1f1;
+  border: 1px solid #e5e7eb;
+}
+
+ul.dropdown li a {
+  float: none !important;
+  text-align: left;
+  display: block;
+  margin: 0 0 10px !important;
+}
+
+ul.dropdown li {
+  display: block;
+  padding: 0 !important;
+}
+
+ul.dropdown li svg {
+  display: inline-block;
+  width: 23px;
+}
+
+.logout,
+.logout svg {
+  color: #e67200;
+  stroke: #e67200;
+}
+
+span.b-icon svg {
+  display: inline-block;
+  margin-right: 11px;
+}
+
+.four-boxes button {
+  border-radius: 4px;
+  outline-offset: 2px;
+  line-height: 1.2;
+  border: 1px solid #e5e7eb;
+  text-align: center;
+  padding: 9px 17px;
+
+  margin: 0;
+}
+
+.four-boxes button svg {
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.four-boxes button span {
+  background: #ffd7ae;
+  padding: 1px 7px;
+  font-size: 14px;
+  border-radius: 5px;
+  font-weight: 500;
+}
+
+.header {
+  overflow: hidden;
+  margin: 43px 0 18px;
+}
+
+.btn-h span {
+  margin: 0 65px 0 59px;
+}
+
+.btn-h {
+  margin-top: 15px;
+}
+
+.col {
+  border: 1px solid #e5e7eb;
+  text-align: center;
+  min-height: 250px;
+  padding: 15px 0;
+  border-radius: 6px
+}
+
+.col:first-child {
+  padding: 0;
+}
+
+.col span {
+  background: #0042da;
+  width: 40px;
+  display: inline-block;
+  color: #fff;
+  font-size: 14px;
+  padding: 1px 0;
+  position: relative;
+  top: -2px;
+}
 
 svg {
-    width: 1em;
-    height: 1em;
-    line-height: 1em;
-    -webkit-flex-shrink: 0;
-    -ms-flex-negative: 0;
-    flex-shrink: 0;
-    color: currentColor;
-    fill: transparent !important;
-    vertical-align: middle; 
+  stroke: #111;
+}
+
+/* .col button:last-child {
+  border: 1px solid #e5e7eb;
+  padding: 5px;
+  border-radius: 5px;
+} */
+
+.col button:last-child svg {
+  stroke: #111;
+}
+
+.col button:first-child svg {
+  stroke: #0042da;
+}
+
+.col .c-svg {
+  margin: 45px auto 0;
+  width: 35px;
+  height: 35px;
+}
+
+.col h2 {
+  font-size: 17px;
+  font-weight: 600;
+  color: #222;
+  margin-top: 8px;
+}
+
+.c-n {
+  background: #0042da;
+  width: 100%;
+  margin: 0;
+  height: 270px;
+  border-radius: 6px
+}
+
+button.c-n:hover {
+  background: #0036b4;
+}
+
+.c-n svg {
+  stroke: #fff !important;
+  margin-top: 0 !important;
+}
+
+.c-n h2 {
+  color: #fff;
+
+}
+
+@media (min-width: 1925px) and (max-width : 2600px) {
+  .header-btn {
+    width: 557px;
   }
 
-  .dashboard {
-    width: 1000px;
-    position: relative;
-}
-.header-btn {width: 490px;float: right;text-align: center;}
-.header a {
-    float: left;
-    margin: 15px 0 0 22px;
-}
-header.container.mx-auto.header {width: 900px;margin-top: 26px;}
-
-.header-btn button {/* width: 210px; */border-radius: 4px; /* outline: 2px solid transparent; */ outline-offset: 2px; line-height: 1.2; border: 1px solid #e5e7eb; text-align: center; padding: 9px 17px; /* width: 330px; */ margin-top: 0.5rem;/* border: 1px solid #333; */margin: 0 5px;     float: left;}
-ul.dropdown {  width: 252px;
-    padding: 8px 15px;
-    position: absolute; 
-    right: 0;
-    background: #fff;
-    margin-top: 7px;
-    top: 42px;
-    margin-right: 15px;
-    float: right;
-    box-shadow: 1px 2px 9px #f1f1f1;
-    border: 1px solid #e5e7eb;
-}
-
-ul.dropdown li a {float: none !important;text-align: left;display: block;margin: 0 0 10px !important;}
-
-ul.dropdown li {display: block;padding: 0 !important;}
-ul.dropdown li svg{    display: inline-block;
-    width: 23px;
-}
-.logout, .logout svg{color: #e67200; stroke:#e67200 ;}
-span.b-icon svg {display: inline-block;margin-right: 11px;}
-
-.four-boxes button {border-radius: 4px;
-    outline-offset: 2px;
-    line-height: 1.2;
-    border: 1px solid #e5e7eb;
-    text-align: center;
-    padding: 9px 17px;
-    
-    margin: 0;}
-
-.four-boxes button svg {display: inline-block;margin-right: 5px;}
-
-.four-boxes button span {background: #ffd7ae;padding: 1px 7px;font-size: 14px;border-radius: 5px;font-weight: 500;}
-
-.header {overflow: hidden;margin: 43px 0 18px;}
-.btn-h span {
-    margin: 0 65px 0 59px;
-} 
-.btn-h {
-    margin-top: 15px;
-}
-.col {border: 1px solid #e5e7eb;text-align: center;min-height: 250px;padding: 15px 0;    border-radius: 6px}
-.col:first-child {
-    padding: 0;
-}
-.col span {background: #0042da;width: 40px;display: inline-block;color: #fff;font-size: 14px;padding: 1px 0;position: relative;top: -2px;}
-svg{stroke: #111;}
-.col button:last-child {border: 1px solid #e5e7eb;padding: 5px;border-radius: 5px;}
-
-.col button:last-child svg {stroke: #111;}
-
-.col button:first-child svg {stroke: #0042da;}
-.col .c-svg {margin: 45px auto 0;width: 35px;height: 35px;}
-
-.col h2 {font-size: 17px;font-weight: 600;color: #222;margin-top: 8px;}
-.c-n{
-    background: #0042da;
-    width: 100%;
-    margin: 0;
-    height: 270px;
-    border-radius: 6px
-}
-button.c-n:hover {
-    background: #0036b4;
-}
-.c-n svg {
-    stroke: #fff !important;
-    margin-top: 0 !important; 
-}
-.c-n h2 {
-    color: #fff;
-    
-}
-@media (min-width: 1925px) and (max-width : 2600px) {
-    .header-btn {
-        width: 557px;
-       }
-.header-btn button {
+  .header-btn button {
     border-radius: 4px;
     outline-offset: 2px;
     line-height: 1.2;
@@ -112,9 +214,9 @@ button.c-n:hover {
     margin: 0 5px;
     float: left;
     font-size: 19px;
-}
+  }
 
-.four-boxes button {
+  .four-boxes button {
     border-radius: 4px;
     outline-offset: 2px;
     line-height: 1.2;
@@ -123,230 +225,344 @@ button.c-n:hover {
     margin: 0;
     padding: 15px 28px;
     font-size: 19px;
-}
+  }
 
 
-.col {
+  .col {
     min-height: 300px;
-}
+  }
 
-.col  h2 {
+  .col h2 {
     font-size: 20px;
     font-weight: 600;
     color: #222;
     margin-top: 8px;
-}
+  }
 
 
-.col span {
+  .col span {
     width: 44px;
-	
-	}
-    .c-n {
-        height: 300px;
-    }
+
+  }
+
+  .c-n {
+    height: 300px;
+  }
 
 }
-  
+
 @media only screen and (max-width: 1000px) {
-    .wrapper{width:100%;}
+  .wrapper {
+    width: 100%;
+  }
 
 }
-@media only screen and (max-width: 650px) {
-    .flex {
-        display: block;
-    }
-    .header-btn {
-        width: 240px;
-        float: none;
-        text-align: center;
-        overflow: hidden; margin: 0 auto 20px;
-    }
-    .header-btn button.rounded-none.sign-up-btn {
-        margin-bottom: 9px !important;
-    }
-    button.rounded-none.sign-up-btnP{
-        width: 100%; margin-bottom: 20px;
 
-    } 
-    .col {
-        margin-bottom: 20px;
-        margin-right: 0;
-    }
-    .header a {
-        float: none;
-        margin: 0 auto 14px;
-        text-align: center;
-        width: 3em !important;
-        display: block;
-    } 
-    button.rounded-none.sign-up-btn {
-        margin: 0 auto !important;
-        width: 250px;
-        display: block;
-        overflow: hidden;
-    }
-    /* .header{
+@media only screen and (max-width: 650px) {
+  .flex {
+    display: block;
+  }
+
+  .header-btn {
+    width: 240px;
+    float: none;
+    text-align: center;
+    overflow: hidden;
+    margin: 0 auto 20px;
+  }
+
+  .header-btn button.rounded-none.sign-up-btn {
+    margin-bottom: 9px !important;
+  }
+
+  button.rounded-none.sign-up-btnP {
+    width: 100%;
+    margin-bottom: 20px;
+
+  }
+
+  .col {
+    margin-bottom: 20px;
+    margin-right: 0;
+  }
+
+  .header a {
+    float: none;
+    margin: 0 auto 14px;
+    text-align: center;
+    width: 3em !important;
+    display: block;
+  }
+
+  button.rounded-none.sign-up-btn {
+    margin: 0 auto !important;
+    width: 250px;
+    display: block;
+    overflow: hidden;
+  }
+
+  /* .header{
         margin: 43px 0 0;
     } */
-    
+
 }
-.wrapper{width: 890px;
-    margin-top: 40px;
-    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 10%), 0 4px 6px -2px rgb(0 0 0 / 5%);
-    margin-top: 3.75rem;
-    margin-bottom: 3.75rem;
-    border-radius: 6px;
-    border: 1px solid #e5e7eb !important;
 
-} 
-    .sidebar {
-        border-right: 1px solid #e5e7eb;
-        padding: 30px 0 30px 0; 
-        min-height: 585px;
-    }
-.sidebar a {display: block;font-size: 17px;font-weight: 400;color: #6b7280;    margin-bottom: 15px; margin-left: 15px;}
-.sidebar button{
-    line-height: 1.2;
-    text-align: left;
-    padding:6px 14px;
-    margin-top: 0;
-    font-size: 15px;
-    font-weight: 400;
-    display: block;
-    margin-bottom: 0;
-    margin-bottom: 9px;
-    width: 100%; 
-    
+.wrapper {
+  width: 890px;
+  margin-top: 40px;
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 10%), 0 4px 6px -2px rgb(0 0 0 / 5%);
+  margin-top: 3.75rem;
+  margin-bottom: 3.75rem;
+  border-radius: 6px;
+  border: 1px solid #e5e7eb !important;
+
 }
-.sidebar button:hover{background-color: #f3f4f6; border-radius: 5px;}
-.sidebar button.active{ background-color: #f3f4f6; border-radius: 5px;}
 
-.sidebar button svg {    display: inline-block;
-    width: 15px;
-    height: 15px;
-    margin-top: -3px;
-    stroke: #111;
-    margin-right: 3px;}
-    .sidebar h3 {color: #6b7280;font-weight: 400;font-size: 16px;margin: 34px 0 15px 16px; }
-    
-	.aside {
-        padding: 40px;
-    }
-    .profile {width: 207px;   margin-bottom: 29px;  }
-    .profile p {text-align: right; text-align: right; 
-        margin-top: -21px;
-        font-size: 14px;}
-    .profile img {
-        width: 64px;
-        height: 64px;
-        object-fit: cover;
-        border-radius: 9999px;
-        display: inline-block;
-    }
-    .file-upload{
-      
-        top: -7px;
+.sidebar {
+  border-right: 1px solid #e5e7eb;
+  padding: 30px 0 30px 0;
+  min-height: 585px;
+}
 
-        position:relative;
-        
-        display: inline-block;
-    } 
-        .file-upload  input[type='file']{
-    
-         
-          position:absolute;
-          top:0;
-          left:0;
-          opacity:0;
-          cursor:pointer;
-    
-        }
-        .file-upload svg {display: inline-block;stroke: #000;margin-right: 4px;margin-top: -2px;}
+.sidebar a {
+  display: block;
+  font-size: 17px;
+  font-weight: 400;
+  color: #6b7280;
+  margin-bottom: 15px;
+  margin-left: 15px;
+}
 
-.file-upload {background: #f3f4f6;padding: 5px 7px;font-size: 13px;border-radius: 5px;margin-left: 13px;}
+.sidebar button {
+  line-height: 1.2;
+  text-align: left;
+  padding: 6px 14px;
+  margin-top: 0;
+  font-size: 15px;
+  font-weight: 400;
+  display: block;
+  margin-bottom: 0;
+  margin-bottom: 9px;
+  width: 100%;
+
+}
+
+.sidebar button:hover {
+  background-color: #f3f4f6;
+  border-radius: 5px;
+}
+
+.sidebar button.active {
+  background-color: #f3f4f6;
+  border-radius: 5px;
+}
+
+.sidebar button svg {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin-top: -3px;
+  stroke: #111;
+  margin-right: 3px;
+}
+
+.sidebar h3 {
+  color: #6b7280;
+  font-weight: 400;
+  font-size: 16px;
+  margin: 34px 0 15px 16px;
+}
+
+.aside {
+  padding: 40px;
+}
+
+.profile {
+  width: 207px;
+  margin-bottom: 29px;
+}
+
+.profile p {
+  text-align: right;
+  text-align: right;
+  margin-top: -21px;
+  font-size: 14px;
+}
+
+.profile img {
+  width: 64px;
+  height: 64px;
+  object-fit: cover;
+  border-radius: 9999px;
+  display: inline-block;
+}
+
+.file-upload {
+
+  top: -7px;
+
+  position: relative;
+
+  display: inline-block;
+}
+
+.file-upload input[type='file'] {
+
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  cursor: pointer;
+
+}
+
+.file-upload svg {
+  display: inline-block;
+  stroke: #000;
+  margin-right: 4px;
+  margin-top: -2px;
+}
+
+.file-upload {
+  background: #f3f4f6;
+  padding: 5px 7px;
+  font-size: 13px;
+  border-radius: 5px;
+  margin-left: 13px;
+}
 
 .field-box {
-    margin-bottom: 23px;
+  margin-bottom: 23px;
 }
-.field-box label {display: block;
-    font-weight: 500;
-    margin-bottom: 7px;
-    color: #111;
-    font-size: 15px;}
 
-.field-box input {width: 100%;height: 40px;border: 1px solid #e5e7eb;border-radius: 4px;padding: 0 8px;line-height: 18px;font-size: 15px;}
+.field-box label {
+  display: block;
+  font-weight: 500;
+  margin-bottom: 7px;
+  color: #111;
+  font-size: 15px;
+}
 
-.tokken input {width: 90% !important;border: none !important;}
+.field-box input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #e5e7eb;
+  border-radius: 4px;
+  padding: 0 8px;
+  line-height: 18px;
+  font-size: 15px;
+}
+
+.tokken input {
+  width: 90% !important;
+  border: none !important;
+}
+
 input#email {
-    opacity: 0.4;
-    cursor: not-allowed;
+  opacity: 0.4;
+  cursor: not-allowed;
 }
-.tokken {border: 1px solid #e5e7eb;
-    border-radius: 4px;}
 
-.tokken input:focus {outline: none;}
+.tokken {
+  border: 1px solid #e5e7eb;
+  border-radius: 4px;
+}
 
-.tokken button {background: #f3f4f6;font-size: 12px;font-weight: 500;padding: 2px 7px;border-radius: 5px;letter-spacing: 0.5px;color: #111;position: relative;top: -1px;}
+.tokken input:focus {
+  outline: none;
+}
+
+.tokken button {
+  background: #f3f4f6;
+  font-size: 12px;
+  font-weight: 500;
+  padding: 2px 7px;
+  border-radius: 5px;
+  letter-spacing: 0.5px;
+  color: #111;
+  position: relative;
+  top: -1px;
+}
+
 .modal-box {
-    width: 55%;
-    text-align: left;
-    border-radius: 5px;
+  width: 55%;
+  text-align: left;
+  border-radius: 5px;
 }
+
 @media only screen and (max-width: 900px) {
-    .modal-box {
-        width: 100%;
-        
-    }
-    .wrapper{width:100%;}
+  .modal-box {
+    width: 100%;
+
+  }
+
+  .wrapper {
+    width: 100%;
+  }
 }
-.modal-popup  .wp-title[_ngcontent-qta-c29] {
-    font-size: 17px;
-    background: #e0edff;
+
+.modal-popup .wp-title[_ngcontent-qta-c29] {
+  font-size: 17px;
+  background: #e0edff;
 }
+
 .modal-popup.px-5.py-3 {
-    width: 500px;
+  width: 500px;
 }
-.modal-popup svg.mr-2.mt-1.text-white{
-    border-radius: 100%;
-    width: 24px;
-    height: 24px;
+
+.modal-popup svg.mr-2.mt-1.text-white {
+  border-radius: 100%;
+  width: 24px;
+  height: 24px;
 }
-.modal-popup h3.font-bold.text-2xl.text-left{
-    font-size: 30px;
+
+.modal-popup h3.font-bold.text-2xl.text-left {
+  font-size: 30px;
 }
-.modal-popup p.text-lg.text-left.my-4{
-    font-size: 20px;
+
+.modal-popup p.text-lg.text-left.my-4 {
+  font-size: 20px;
 }
-.modal-popup .flex.bg-white.modal-box{
-    border-radius: 5px
+
+.modal-popup .flex.bg-white.modal-box {
+  border-radius: 5px
 }
-.modal-popup ul{
-    font-size: 19px;
+
+.modal-popup ul {
+  font-size: 19px;
 }
-.modal-popup h5.font-bold.text-4xl{
-    font-size: 38px;
+
+.modal-popup h5.font-bold.text-4xl {
+  font-size: 38px;
 }
-.modal-popup span.text-base.pt-3.font-bold{
-    font-size: 20px;
+
+.modal-popup span.text-base.pt-3.font-bold {
+  font-size: 20px;
 }
-.wp-title{
-    background: #e0edff;
+
+.wp-title {
+  background: #e0edff;
 }
+
 .sec-popup .modal-box {
-    width: auto;
-    text-align: left;
-    border-radius: 5px;
+  width: auto;
+  text-align: left;
+  border-radius: 5px;
 }
-.sec-popup svg{
-    stroke:#fff
+
+.sec-popup svg {
+  stroke: #fff
 }
-.sec-popup svg path{
-    color:#0042da;
+
+.sec-popup svg path {
+  color: #0042da;
 }
-.sec-popup h4 { 
-    font-size: 20px;
+
+.sec-popup h4 {
+  font-size: 20px;
 }
-.sec-popup ul li svg{
-    stroke:#000
+
+.sec-popup ul li svg {
+  stroke: #000
 }
