--- a/apps/builder/src/app/views/acc-setting/acc-setting.component.css
+++ b/apps/builder/src/app/views/acc-setting/acc-setting.component.css
@@ -7,152 +7,188 @@ svg {
   flex-shrink: 0;
   color: currentColor;
   fill: transparent !important;
-  vertical-align: middle; 
+  vertical-align: middle;
 }
+
 input.sub-btn {
   margin-top: 16px;
   border-color: #C53030 !important;
   color: #C53030;
   border-radius: 6px !important;
 }
-.wrapper {
-    width: 890px;
-    margin-top: 40px;
-    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 10%), 0 4px 6px -2px rgb(0 0 0 / 5%);
-    margin-top: 3.75rem;
-    margin-bottom: 3.75rem;
-    border-radius: 6px;
-    border: 1px solid #e5e7eb !important;
 
+.wrapper {
+  width: 890px;
+  margin-top: 40px;
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 10%), 0 4px 6px -2px rgb(0 0 0 / 5%);
+  margin-top: 3.75rem;
+  margin-bottom: 3.75rem;
+  border-radius: 6px;
+  border: 1px solid #e5e7eb !important;
+
+}
+
+.sidebar {
+  border-right: 1px solid #e5e7eb;
+  padding: 30px 0 30px 0;
+  min-height: 650px;
+}
+
+.sidebar a {
+  display: block;
+  font-size: 17px;
+  font-weight: 400;
+  color: #6b7280;
+  margin-bottom: 15px;
+  margin-left: 15px;
+}
+
+.sidebar button {
+  line-height: 1.2;
+  text-align: left;
+  padding: 6px 14px;
+  margin-top: 0;
+  font-size: 15px;
+  font-weight: 400;
+  display: block;
+  margin-bottom: 0;
+  margin-bottom: 9px;
+  width: 100%;
+}
+
+.sidebar button:hover {
+  background-color: #f3f4f6;
+  border-radius: 5px;
+}
+
+.sidebar button.active {
+  background-color: #f3f4f6;
+  border-radius: 5px;
+}
+
+.sidebar button svg {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin-top: -3px;
+  stroke: #111;
+  margin-right: 3px;
+}
+
+.sidebar h3 {
+  color: #6b7280;
+  font-weight: 400;
+  font-size: 16px;
+  margin: 34px 0 15px 16px;
+}
+
+.aside {
+  padding: 40px;
+}
+
+.aside p {
+  font-size: 17px;
+  margin-bottom: 12px;
+}
+
+
+.profile {
+  width: 60px;
+  margin-bottom: 30px;
+}
+
+.profile p {
+  text-align: right;
+  text-align: right;
+  margin-top: -21px;
+  font-size: 14px;
+}
+
+.profile img {
+  width: 64px;
+  height: 64px;
+  object-fit: cover;
+  border-radius: 9999px;
+  display: inline-block;
+}
+
+.file-upload {
+  display: block;
+  stroke: #000;
+  margin-right: 0;
+  margin-top: 0;
+  width: 40px;
+  height: 40px;
+}
+
+.file-upload input[type='file'] {
+
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  cursor: pointer;
+
+}
+
+.file-upload svg {
+  display: inline-block;
+  stroke: #000;
+  margin-right: 4px;
+  margin-top: -2px;
+  width: 40px;
+  height: 40px;
+}
+
+
+@media only screen and (max-width: 900px) {
+  .wrapper {
+    width: 100%;
   }
+
+}
+
+@media only screen and (max-width: 800px) {
   .sidebar {
     border-right: 1px solid #e5e7eb;
     padding: 30px 0 30px 0;
-    min-height: 650px;
+    min-height: 100%;
+    padding: 40px;
   }
-  .sidebar a {
-    display: block;
-    font-size: 17px;
-    font-weight: 400;
-    color: #6b7280;
-    margin-bottom: 15px;
-    margin-left: 15px;
-  }
-  .sidebar button {
-    line-height: 1.2;
-    text-align: left;
-    padding: 6px 14px;
-    margin-top: 0;
-    font-size: 15px;
-    font-weight: 400;
-    display: block;
-    margin-bottom: 0;
-    margin-bottom: 9px;
-    width: 100%;
-  }
-  .sidebar button:hover {
-    background-color: #f3f4f6;
-    border-radius: 5px;
-  }
-  .sidebar button.active {
-    background-color: #f3f4f6;
-    border-radius: 5px;
-  }
-  
-  .sidebar button svg {
-    display: inline-block;
-    width: 15px;
-    height: 15px;
-    margin-top: -3px;
-    stroke: #111;
-    margin-right: 3px;
-  }
-  .sidebar h3 {
-    color: #6b7280;
-    font-weight: 400;
-    font-size: 16px;
-    margin: 34px 0 15px 16px;
-  }
-  
+
   .aside {
     padding: 40px;
   }
 
-  .aside p {
-    font-size: 17px;
-    margin-bottom: 12px;
+  .wrapper .flex {
+    display: block;
+  }
 }
 
-  
-  .profile { width: 60px;
-    margin-bottom: 30px; }
+.tooltip{
+  position: relative;
+}
 
-  .profile p {text-align: right; text-align: right; 
-      margin-top: -21px;
-      font-size: 14px;}
-  .profile img {
-      width: 64px;
-      height: 64px;
-      object-fit: cover;
-      border-radius: 9999px;
-      display: inline-block;
-  }
-  .file-upload{
-    display: block;
-    stroke: #000;
-    margin-right: 0;
-    margin-top: 0;
-    width: 40px;
-    height: 40px;
-  } 
-      .file-upload  input[type='file']{
-  
-       
-        position:absolute;
-        top:0;
-        left:0;
-        opacity:0;
-        cursor:pointer;
-  
-      }
-      .file-upload svg {display: inline-block;stroke: #000;margin-right: 4px;margin-top: -2px; width: 40px;
-        height: 40px;}
+.tooltip .tooltip-text {
+  width: max-content;
+  background-color: #3a3a3a;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  right: 0px;
+  left: 60px;
+  top: 10px;
+  padding: 2px 10px;
+  z-index: 9 !important;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  visibility: hidden;
+      margin-left: auto;
+  margin-right: auto;
+}
 
-        form.invite-form label {
-            display: block;
-            margin-bottom: 7px;
-            font-weight:600;
-        }
-        form.invite-form input {
-            width: 100%;
-            height: 40px;
-            border: 1px solid #e5e7eb;
-      
-            padding: 0 8px;
-            line-height: 18px;
-            font-size: 15px;
-        }
-        input.sub-btn {
-          margin-top: 16px;
-          border-color: #C53030 !important;
-          color: #C53030;
-          border-radius: 6px !important;
-      }
-        @media only screen and (max-width: 900px) {
-          .wrapper{width:100%;}
-      
-      }
-      @media only screen and (max-width: 800px) {
-        .sidebar {
-        border-right: 1px solid #e5e7eb;
-        padding: 30px 0 30px 0;
-        min-height: 100%;
-        padding: 40px;
-        }
-        .aside {
-        padding: 40px;
-        }
-        .wrapper .flex {
-        display: block;
-        }
-      }
+.tooltip:hover  .tooltip-text {
+  visibility: visible;
+}
