--- a/apps/builder/src/app/views/acc-setting/acc-setting.component.html
+++ b/apps/builder/src/app/views/acc-setting/acc-setting.component.html
@@ -1,20 +1,34 @@
-
-    <div  class="">
-  <p>icon</p>
-
-  <div class="profile">
-    <div class="file-upload">
-        <input type="file" />
-        <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-f7qfrb" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round"><path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z"></path></svg>
-       
+<div class="relative">
+  <label class="block mb-1 font-medium capitalize">icon</label>
+  <div (click)="toggleEmoji()"
+    class="flex items-center justify-center w-12 h-12 p-1 mb-4 rounded-lg cursor-pointer changeable-icon tooltip icon-tooltip hover:bg-gray-100">
+    <img id="emoji-default" src="assets/svgs/setting.svg" class="w-full h-full changeable-icon">
+    <span id="changed-emoji" class="hidden text-xl changeable-icon"></span>
+    <span class="tooltip-text">Change icon</span>
+  </div>
+  <div
+    class="absolute left-0 z-50 hidden px-4 py-6 bg-white rounded-lg shadow-lg h-96 w-72 top-20 emoji-main changeable-icon">
+    <input type="text"
+      class="block w-full h-10 p-2 text-sm text-gray-700 border border-gray-300 rounded-lg placeholder:text-gray-700 placeholder:font-normal placeholder:text-base focus:outline-[#7ea6ff] focus:shadow-lg dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white mb-4 changeable-icon"
+      placeholder="Search..." (keyup)="getEmojiResult($event)">
+    <div class="h-[80%] overflow-y-auto overflow-x-hidden custom-scrollbar changeable-icon">
+      <div *ngIf="changeEmojiView" class="grid grid-cols-7 gap-1 emoji-container changeable-icon">
+        <button *ngFor="let emoji of emojiArray" (click)="replaceEmoji($event)"
+          class="p-1 text-xl rounded-lg hover:bg-gray-100 changeable-icon">{{emoji.emoji}}</button>
       </div>
-      
+      <div *ngIf="!changeEmojiView" class="grid grid-cols-7 gap-1 emoji-container changeable-icon searched-emoji">
+        <button *ngFor="let emoji of searchedEmoji" (click)="replaceEmoji($event)"
+          class="p-1 text-xl rounded-lg hover:bg-gray-100 changeable-icon">{{emoji.emoji}}</button>
+      </div>
+    </div>
+  </div>
+
+  <form class="invite-form">
+    <label class="block mb-4 font-medium capitalize">Name</label>
+    <input type="text" value="nomikhokher's workspace" class="block w-full px-3 py-2 bg-white border rounded-md focus:outline-none focus:border-blue-700 focus:ring-blue-700 sm:text-sm focus:ring-1">
+    <button type="submit" value="DeleteWorkspace" class="w-full px-3 py-2 mt-4 font-medium text-center text-red-700 border border-red-700 rounded-lg sub-btn hover:bg-red-50">
+      Delete workspace
+    </button>
+  </form>
+
 </div>
-  
-        <form  class="invite-form">
-            <label>Name</label>
-          <input  type="text" value="nomikhokher's workspace" class="rounded-md">
-          <input type="submit" value="Delete workspace" class="sub-btn">
-        </form>
-        
-      </div>  
