--- a/apps/builder/src/app/views/dashboard/dashboard.component.css
+++ b/apps/builder/src/app/views/dashboard/dashboard.component.css
@@ -565,3 +565,29 @@ input#email {
 .sec-popup ul li svg {
   stroke: #000
 }
+
+
+.tooltip .tooltip-text {
+  width: fit-content;
+  background-color: #3a3a3a;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  right: 0px;
+  left: 0;
+  top: 40px;
+  padding: 2px 10px;
+  z-index: 9 !important;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  visibility: hidden;
+      margin-left: auto;
+  margin-right: auto;
+}
+.tooltip{
+  position: relative;
+}
+.tooltip:hover  .tooltip-text {
+  visibility: visible;
+}
