--- a/apps/builder/src/app/views/preferences/preferences.component.html
+++ b/apps/builder/src/app/views/preferences/preferences.component.html
@@ -1,57 +1,32 @@
-    <!-- <div class="wrapper mx-auto setting">
-        <div class="flex"> -->
-
-
-        <!-- <div class="w-1/4 sidebar">
-            <a href="#">example@email.com</a>
-
-            <button class="rounded-none ">
-                <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
-                My Account 
-            </button>
-
-            <button class="rounded-none active">
-                <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
-                Preferences
-             </button>
-             <h3>Workspace</h3>
-             <button class="rounded-none ">
-                <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-18myi7" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round"><line x1="22" y1="12" x2="2" y2="12"></line><path d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"></path><line x1="6" y1="16" x2="6.01" y2="16"></line><line x1="10" y1="16" x2="10.01" y2="16"></line></svg>
-                Setting 
-            </button>
-            <button class="rounded-none ">
-                <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
-                Members 
-            </button>
-            <button class="rounded-none ">
-                <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-1k8v1e7" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><rect x="1" y="4" width="22" height="16" rx="2" ry="2"></rect><line x1="1" y1="10" x2="23" y2="10"></line></svg>
-                Billing
-            </button>
-        </div> -->
- 
-        <h2  class="font-bold text-xl">Editor Navigation</h2>
-        <div class="w-full aside">
-            
-            <div class="flex">
-                <div class="p-col mr-4 basis-3/6">
-                    <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-dhsoq7" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2V2C16.4183 2 20 5.58172 20 10V14C20 18.4183 16.4183 22 12 22V22C7.58172 22 4 18.4183 4 14V10C4 5.58172 7.58172 2 12 2V2ZM12 2V9" stroke="currentColor" stroke-linecap="round"></path></svg>
-                    <h4>Mouse</h4>
-                    <p>Move by dragging the board and zoom in/out using the scroll wheel</p>
-                    <form>
-                        <input type="radio" class="r-btn">
-                    </form>
-
-
-                </div>
-                <div class="p-col basis-3/6 ">
-                    <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-dhsoq7" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round"><path d="M3.2 14.2222V4C3.2 2.89543 4.09543 2 5.2 2H18.8C19.9046 2 20.8 2.89543 20.8 4V14.2222M3.2 14.2222H20.8M3.2 14.2222L1.71969 19.4556C1.35863 20.7321 2.31762 22 3.64418 22H20.3558C21.6824 22 22.6414 20.7321 22.2803 19.4556L20.8 14.2222" stroke="currentColor" stroke-width="1.5"></path><path d="M11 19L13 19" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-                    <h4>Trackpad</h4>
-                    <p>Move the board using 2 fingers and zoom in/out by pinching</p>
-                    <form>
-                        <input type="radio" class="r-btn" checked="checked">
-                    </form>
-                </div>
-              </div>
-        </div>
-    <!-- </div>
-    </div> -->
+<h2 class="text-xl font-bold">Editor Navigation</h2>
+<div class="w-full py-6">
+  <div class="grid items-center grid-cols-2 gap-4">
+    <div class="flex items-center text-gray-700">
+      <label for="default-radio-1" class="p-4 text-sm font-medium text-gray-900 border rounded-lg dark:text-gray-300">
+      <svg fill="none" viewBox="0 0 24 24" focusable="false" class="block w-10 h-10 mx-auto" stroke-width="2px"
+        stroke-linecap="round" stroke-linejoin="round">
+        <path
+          d="M12 2V2C16.4183 2 20 5.58172 20 10V14C20 18.4183 16.4183 22 12 22V22C7.58172 22 4 18.4183 4 14V10C4 5.58172 7.58172 2 12 2V2ZM12 2V9"
+          stroke="currentColor" stroke-linecap="round"></path>
+      </svg>
+      <h4 class="mt-4 mb-2 text-lg font-medium">Mouse</h4>
+      <p class="text-base font-normal">Move by dragging the board and zoom in/out using the scroll wheel</p>
+      <input id="default-radio-1" type="radio" value="" name="default-radio" class="block w-5 h-5 mx-auto mt-4 text-blue-700 bg-gray-100 border-gray-300 rounded-full focus:ring-blue-700 dark:focus:ring-blue-700 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-700 focus:rounded-full ">
+      </label>
+    </div>
+    <div class="flex items-center text-gray-700">
+      <label for="default-radio-2" class="p-4 text-sm font-medium text-gray-900 border rounded-lg dark:text-gray-300">
+        <svg fill="none" viewBox="0 0 24 24" focusable="false" class="block w-10 h-10 mx-auto" stroke-width="2px"
+          stroke-linecap="round" stroke-linejoin="round">
+          <path
+            d="M3.2 14.2222V4C3.2 2.89743 4.09543 2 5.2 2H18.8C19.9046 2 20.8 2.89543 20.8 4V14.2222M3.2 14.2222H20.8M3.2 14.2222L1.71969 19.4556C1.35863 20.7321 2.31762 22 3.64418 22H20.3558C21.6824 22 22.6414 20.7321 22.2803 19.4556L20.8 14.2222"
+            stroke="currentColor" stroke-width="1.5"></path>
+          <path d="M11 19L13 19" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path>
+        </svg>
+        <h4 class="mt-4 mb-2 text-lg font-medium">Trackpad</h4>
+        <p class="text-base font-normal">Move the board using 2 fingers and zoom in/out by pinching</p>
+        <input checked id="default-radio-2" type="radio" value="" name="default-radio" class="block w-5 h-5 mx-auto mt-4 text-blue-700 bg-gray-100 border-gray-300 rounded-full focus:rounded-full focus:ring-blue-700 dark:focus:ring-blue-700 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-700">
+      </label>
+    </div>
+  </div>
+</div>
